--- a/_config.yml
+++ b/_config.yml
@@ -265,8 +265,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Ó Fithcheallaigh]
+  first_name: [Seán]
 
   style: apa
   locale: en
@@ -628,7 +628,7 @@ jsonresume:
   - basics
   - work
   - education
-  - publications
+  # - publications
   - projects
   - volunteer
   - awards
