--- a/_config.yml
+++ b/_config.yml
@@ -628,10 +628,10 @@ jsonresume:
   - basics
   - work
   - education
-  - publications
+  # - publications
   - projects
   - volunteer
-  - awards
+  # - awards
   - certificates
   - skills
   - languages
